--- a/SystemTicket/Info.plist
+++ b/SystemTicket/Info.plist
@@ -17,9 +17,9 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.4.2</string>
+	<string>1.4.0</string>
 	<key>CFBundleVersion</key>
-	<string>12.02.18</string>
+	<string>13.02.18 BETA</string>
 	<key>LSMinimumSystemVersion</key>
 	<string>$(MACOSX_DEPLOYMENT_TARGET)</string>
 	<key>NSAppTransportSecurity</key>
